TransferList: Should now list all transfers ever made in date order

--- a/TheLeague/ClientApp/app/components/home/home.component.html
+++ b/TheLeague/ClientApp/app/components/home/home.component.html
@@ -13,6 +13,6 @@
     </div>
     
     <div class="col-sm-6">
-        <transfers [minified]="true"></transfers>
+        <transfer-list></transfer-list>
     </div>
 </div>
