--- a/TheLeague/ClientApp/app/components/lineup/lineups.component.css
+++ b/TheLeague/ClientApp/app/components/lineup/lineups.component.css
@@ -1,12 +1,4 @@
-﻿.lineupSet {
-    color: #0f0;
-}
-
-.lineupNotSet {
-    color: #f00;
-}
-
-#Lineups {    
+﻿#Lineups {    
     -moz-column-count:2;
     -webkit-column-count:2;
     column-count:2;
