Added bottom margin to entire app container to prevent any content hugging screen bottom and added title to management page to help with spacing

--- a/TheLeague/ClientApp/app/components/management/management.component.html
+++ b/TheLeague/ClientApp/app/components/management/management.component.html
@@ -1,1 +1,5 @@
-﻿<button class="btn btn-primary" (click)="updateAllResults()">Update all GW {{ currentGameWeek }} results</button>
+﻿<h3><a href="#management" data-toggle="collapse">League Management</a></h3>
+
+<div id="management" class="collapse in">
+    <button class="btn btn-primary" (click)="updateAllResults()">Update all GW {{ currentGameWeek }} results</button>
+</div>
