--- a/TheLeague/ClientApp/app/components/app/app.component.html
+++ b/TheLeague/ClientApp/app/components/app/app.component.html
@@ -1,4 +1,4 @@
-<div class='container-fluid'>
+<div class='container-fluid' style="margin-bottom: 20px;">
     <div class='row'>
         <div class='col-sm-2'>
             <nav-menu></nav-menu>
