--- a/TheLeague/ClientApp/app/components/home/home.component.html
+++ b/TheLeague/ClientApp/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-sm-6">
-        <lineups></lineups>
+        <lineups [minified]="true"></lineups>
     </div>
     <div class="col-sm-6">
         <results [minified]="true"></results>
