--- a/TheLeague/Views/Home/Index.cshtml
+++ b/TheLeague/Views/Home/Index.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Home Page";
 }
 
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
 <app @*asp-prerender-module="ClientApp/dist/main-server"*@>
     <h1 style="color: #337ab7; margin: 20px;">The League App is loading...</h1>
 </app>
