Added minified transfer list

--- a/TheLeague/ClientApp/app/components/home/home.component.html
+++ b/TheLeague/ClientApp/app/components/home/home.component.html
@@ -13,6 +13,6 @@
     </div>
     
     <div class="col-sm-6">
-        <transfer-list></transfer-list>
+        <transfer-list [minified]="true"></transfer-list>
     </div>
 </div>
