--- a/TheLeague/ClientApp/app/components/transfer/transfer-list.component.html
+++ b/TheLeague/ClientApp/app/components/transfer/transfer-list.component.html
@@ -27,4 +27,10 @@
         </tr>
         </tbody>
     </table>
+    
+    <p *ngIf="minified">
+        <a [routerLink]="['/transfer-list']">
+            View more
+        </a>
+    </p>
 </div>
